Card alignment and bug fixes

--- a/game/eit-gui/src/app/leaderboard/leaderboard.component.scss
+++ b/game/eit-gui/src/app/leaderboard/leaderboard.component.scss
@@ -5,8 +5,8 @@ table {
     background-color: white;
 }
 
-tr {
-    line-height: 30px;
+th,td {
+    line-height: 0px;
 }
 
 .centered {
