--- a/game/eit-gui/src/app/status-panel/status-panel.component.scss
+++ b/game/eit-gui/src/app/status-panel/status-panel.component.scss
@@ -6,16 +6,6 @@
     background-color: white;
 }
 
-.mat-card.scrollable-content {
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-  
-    > .mat-card-title-group {
-      display: block;
-    }
-  
-    > .mat-card-content {
-      overflow-y: auto;
-    }
-  }
+.scrollable {
+    overflow-y: scroll;
+}
